Делает footer в 4 задании

--- a/source/photo.html
+++ b/source/photo.html
@@ -113,26 +113,28 @@
   </main>
 
   <footer class="page-footer">
-    <b class="tag">#visitsedona</b>
-    <section class="page-footer__social social">
-      <h3 class="visually-hidden">Седона в соцсетях</h3>
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в В Твиттере</a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Youtube</a>
-        </li>
-      </ul>
-    </section>
+    <div class="page-footer__wrapper">
+      <b class="page-footer__tag">#visitsedona</b>
+      <section class="page-footer__social social">
+        <h3 class="visually-hidden">Седона в соцсетях</h3>
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в В Твиттере</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Youtube</a>
+          </li>
+        </ul>
+      </section>
 
-    <div class="made-by">
-      <b>Разработано</b>
-      <a href="https://htmlacademy.ru/intensive/adaptive">
-        <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+      <div class="made-by">
+        <b>Разработано</b>
+        <a href="https://htmlacademy.ru/intensive/adaptive">
+          <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
+      </div>
     </div>
   </footer>
 </body>
