--- a/source/form.html
+++ b/source/form.html
@@ -16,7 +16,7 @@
       <button aria-label="Открыть меню" class="main-nav__toggle" type="button"></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
-          <a class="site-list__link">Главная</a>
+          <a class="site-list__link" href="index.html">Главная</a>
         </li>
         <li class="site-list__item">
           <a class="site-list__link" href="photo.html">Фото и видео</a>
@@ -34,13 +34,17 @@
   <main class="page-main">
 
     <section class="intro">
-      <img class="page-header__sedona-image" src="#" width="321" height="389" alt="Вид города Седона">
-      <img class="page-header__sedona-text" src="#" width="281" height="214" alt="Слоган города Седона">
-      <h1 class="intro__title">Оставьте свой отзыв</h1>
-      <p class="intro__text">
-        Помогите нашим отелям стать лучше!
-        Оставьте отзыв о них, а также о посещенных вами достопримечательностях
-      </p>
+      <div class="intro__wrapper--image">
+        <img class="intro__image" src="#" width="320" height="389" alt="Вид города Седона">
+        <img class="intro__slogan" src="#" width="281" height="214" alt="Слоган города Седона">
+      </div>
+      <div class="intro__wrapper--text">
+        <h1 class="intro__title">Оставьте свой отзыв</h1>
+        <p class="intro__text">
+          Помогите нашим отелям стать лучше!
+          Оставьте отзыв о них, а также о посещенных вами достопримечательностях
+        </p>
+      </div>
     </section>
 
     <section class="feedback">
