--- a/source/index.html
+++ b/source/index.html
@@ -16,10 +16,10 @@
       <button aria-label="Открыть меню" class="main-nav__toggle" type="button"></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
-          <a class="site-list__link">Главная</a>
+          <a class="site-list__link site-list__link--left">Главная</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link" href="photo.html">Фото и видео</a>
+          <a class="site-list__link site-list__link--left" href="photo.html">Фото и видео</a>
         </li>
         <li class="site-list__item">
           <a class="site-list__link" href="form.html">Форма Отзыва</a>
@@ -33,59 +33,73 @@
 
   <main class="page-main">
     <section class="promo">
-      <img class="page-header__sedona-image" src="#" width="320" height="389" alt="Вид города Седона">
-      <img class="page-header__sedona-text" src="#" width="281" height="214" alt="Слоган города Седона">
+      <div class="promo__wrapper">
+        <img class="promo__image" src="#" width="320" height="389" alt="Вид города Седона">
+        <img class="promo__slogan" src="#" width="281" height="214" alt="Слоган города Седона">
+      </div>
       <h1 class="visually-hidden">Седона — городок в Аризоне</h1>
-      <b class="promo__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</b>
-      <p class="promo__argument">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон! </p>
+      <div class="promo__text">
+        <b class="promo__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</b>
+        <p class="promo__argument">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон! </p>
+      </div>
     </section>
 
     <section class="advantages">
       <ul class="advantages__list">
-        <li class="advantages__item advantages__item--lightblue">
-          <h2 class="advantages__title advantages__title--white">Настоящий городок</h2>
-          <span class="advantages__number advantages__number--white">— №1 —</span>
-          <p class="advantages__argument advantages__argument--white">Седона не аттракцион для туристов, там течет своя жизнь</p>
-        </li>
+        <div class="advantages__wrapper">
+          <li class="advantages__item advantages__item--lightblue">
+            <h2 class="advantages__title advantages__title--white">Настоящий городок</h2>
+            <span class="advantages__number advantages__number--white">— №1 —</span>
+            <p class="advantages__argument advantages__argument--white">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            <img class="advantages__image" src="#" width="320" height="260" alt="Жизнь в Седоне">
+          </li>
+        </div>
 
-        <li class="advantages__item advantages__item--housing">
-          <h3 class="advantages__title">Жилье</h3>
-          <p class="advantages__argument">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-        </li>
+        <div class="advantages__wrapper">
+          <li class="advantages__item advantages__item--housing">
+            <h3 class="advantages__title">Жилье</h3>
+            <p class="advantages__argument">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </li>
 
-        <li class="advantages__item advantages__item--souvenirs">
-          <h3 class="advantages__title">Сувениры</h3>
-          <p class="advantages__argument"> Не только китайского, но и местного производства!</p>
-        </li>
+          <li class="advantages__item advantages__item--souvenirs">
+            <h3 class="advantages__title">Сувениры</h3>
+            <p class="advantages__argument"> Не только китайского, но и местного производства!</p>
+          </li>
 
-        <li class="advantages__item advantages__item--food">
-          <h3 class="advantages__title">Еда</h3>
-          <p class="advantages__argument">Всегда заказывайте Фирменный бургер, Вы не разочаруетесь!</p>
-        </li>
+          <li class="advantages__item advantages__item--food">
+            <h3 class="advantages__title">Еда</h3>
+            <p class="advantages__argument">Всегда заказывайте Фирменный бургер, Вы не разочаруетесь!</p>
+          </li>
+        </div>
 
-        <li class="advantages__item advantages__item--lightblue">
-          <h3 class="advantages__title advantages__title--white">Там есть Мост дьявола</h3>
-          <span class="advantages__number advantages__number--white">— №2 —</span>
-          <p class="advantages__argument advantages__argument--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-        </li>
+        <div class="advantages__wrapper">
+          <li class="advantages__item advantages__item--lightblue">
+            <h3 class="advantages__title advantages__title--white">Там есть Мост дьявола</h3>
+            <span class="advantages__number advantages__number--white">— №2 —</span>
+            <p class="advantages__argument advantages__argument--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <img class="advantages__image" src="#" width="320" height="260" alt="Мост дьявола">
+          </li>
+        </div>
 
-        <li class="advantages__item advantages__item--grey">
-          <h3 class="advantages__title"> Небольшая площадь</h3>
-          <span class="advantages__number">— №3 —</span>
-          <p class="advantages__argument">Все интересные места находятся очень близко</p>
-        </li>
+        <div class="advantages__wrapper">
+          <li class="advantages__item advantages__item--grey">
+            <h3 class="advantages__title"> Небольшая площадь</h3>
+            <span class="advantages__number">— №3 —</span>
+            <p class="advantages__argument">Все интересные места находятся очень близко</p>
+          </li>
 
-        <li class="advantages__item advantages__item--grey">
-          <h3 class="advantages__title">Красивая дорога</h3>
-          <span class="advantages__number">— №4 —</span>
-          <p class="advantages__argument">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </li>
+          <li class="advantages__item advantages__item--grey">
+            <h3 class="advantages__title">Красивая дорога</h3>
+            <span class="advantages__number">— №4 —</span>
+            <p class="advantages__argument">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
 
-        <li class="advantages__item advantages__item--grey">
-          <h3 class="advantages__title">Мало туристов</h3>
-          <span class="advantages__number">— №5 —</span>
-          <p class="advantages__argument">Большинство едет в Гранд каньон и толпится там</p>
-        </li>
+          <li class="advantages__item advantages__item--grey">
+            <h3 class="advantages__title">Мало туристов</h3>
+            <span class="advantages__number">— №5 —</span>
+            <p class="advantages__argument">Большинство едет в Гранд каньон и толпится там</p>
+          </li>
+        </div>
       </ul>
     </section>
 
