--- a/source/photo.html
+++ b/source/photo.html
@@ -16,7 +16,7 @@
       <button aria-label="Открыть меню" class="main-nav__toggle" type="button"></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
-          <a class="site-list__link">Главная</a>
+          <a class="site-list__link" href="index.html">Главная</a>
         </li>
         <li class="site-list__item">
           <a class="site-list__link" href="photo.html">Фото и видео</a>
@@ -33,12 +33,15 @@
 
   <main class="page-main">
     <section class="intro">
-      <img class="page-header__sedona-image" src="#" width="321" height="389" alt="Вид города Седона">
-      <img class="page-header__sedona-text" src="#" width="281" height="214" alt="Слоган города Седона">
-      <h1 class="intro__title">Фото и видео</h1>
-      <p class="intro__text">
-        Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
-      </p>
+      <div class="intro__wrapper--image">
+        <img class="intro__image" src="#" width="320" height="389" alt="Вид города Седона">
+        <img class="intro__slogan" src="#" width="281" height="214" alt="Слоган города Седона">
+      </div>
+      <div class="intro__wrapper--text">
+        <h1 class="intro__title">Фото и видео</h1>
+        <p class="intro__text">
+          Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
+        </p>
     </section>
 
     <section class="catalog">
@@ -47,46 +50,54 @@
           <a class="photo__image">
             <img src="img/photo-1-mobile-jpg.png" width="280" height="280" alt="Неродные просторы">
           </a>
-          <h3 class="photo__title">Неродные просторы</h3>
-          <p class="photo__author">Автор фото: Борис</p>
-          <div class="photo__likes likes">
-            <button class="photo__likes likes__button" type="button"></button>
-            <b class="photo__likes likes__title">1350</b>
+          <div class="photo__wrapper">
+            <h3 class="photo__title">Неродные просторы</h3>
+            <p class="photo__author">Автор фото: Борис</p>
+            <div class="photo__likes likes">
+              <button class="photo__likes likes__button" type="button"></button>
+              <b class="photo__likes likes__title">1350</b>
+            </div>
           </div>
         </li>
         <li class="catalog__item photo">
           <a class="photo__image">
             <img src="img/photo-2-mobile-jpg.png" width="280" height="280" alt="Местная растительность">
           </a>
-          <h3 class="photo__title">Местная растительность</h3>
-          <p class="photo__author">Автор фото: Сергей</p>
-          <div class="photo__likes likes">
-            <button class="photo__likes likes__button" type="button"></button>
-            <b class="photo__likes likes__title">143</b>
+          <div class="photo__wrapper">
+            <h3 class="photo__title">Местная растительность</h3>
+            <p class="photo__author">Автор фото: Сергей</p>
+            <div class="photo__likes likes">
+              <button class="photo__likes likes__button" type="button"></button>
+              <b class="photo__likes likes__title">143</b>
+            </div>
           </div>
         </li>
         <li class="catalog__item photo">
           <a class="photo__image">
             <img src="img/photo-3-mobile-jpg.png" width="280" height="280" alt="Дорога на север">
           </a>
-          <h3 class="photo__title">Дорога на север
-          </h3>
-          <p class="photo__author">Автор фото: Петр</p>
-          <div class="photo__likes likes">
-            <button class="photo__likes likes__button" type="button"></button>
-            <b class="photo__likes likes__title">96</b>
+          <div class="photo__wrapper">
+            <h3 class="photo__title">Дорога на север
+            </h3>
+            <p class="photo__author">Автор фото: Петр</p>
+            <div class="photo__likes likes">
+              <button class="photo__likes likes__button" type="button"></button>
+              <b class="photo__likes likes__title">96</b>
+            </div>
           </div>
         </li>
         <li class="catalog__item photo">
           <a class="photo__image">
             <img src="img/photo-4-mobile-jpg.png" width="280" height="280" alt="Мост дьявола">
           </a>
-          <h3 class="photo__title">Мост дьявола
-          </h3>
-          <p class="photo__author">Автор фото: Антон</p>
-          <div class="photo__likes likes">
-            <button class="photo__likes likes__button" type="button"></button>
-            <b class="photo__likes likes__title">254</b>
+          <div class="photo__wrapper">
+            <h3 class="photo__title">Мост дьявола
+            </h3>
+            <p class="photo__author">Автор фото: Антон</p>
+            <div class="photo__likes likes">
+              <button class="photo__likes likes__button" type="button"></button>
+              <b class="photo__likes likes__title">254</b>
+            </div>
           </div>
         </li>
       </ul>
@@ -94,12 +105,14 @@
 
     <section class="video">
       <h3 class="visually-hidden">Видеопрезентация Седоны</h3>
-      <b class="video__title">Все ещё сомневаетесь?</b>
-      <p class="video__argument">
-        Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
-      </p>
+      <div class="video__title--wrapper">
+        <b class="video__title">Все ещё сомневаетесь?</b>
+        <p class="video__argument">
+          Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
+        </p>
+      </div>
       <div class="video__wrapper">
-        <img src="#" width="321" height="201" alt="Видеопрезентация Седоны">
+        <img class="video__image" src="#" width="321" height="201" alt="Видеопрезентация Седоны">
         <div class="video__scroller">
           <button aria-label="Промотать видео вперед или назад" class="video__scroller video__scroller--button" type="button"></button>
         </div>
