--- a/source/photo.html
+++ b/source/photo.html
@@ -144,8 +144,8 @@
       </section>
 
       <div class="made-by">
-        <b>Разработано</b>
-        <a href="https://htmlacademy.ru/intensive/adaptive">
+        <b class="made-by__title">Разработано</b>
+        <a class="made-by__link" href="https://htmlacademy.ru/intensive/adaptive">
           <img src="#" width="27" height="34" alt="HTML и CSS, уровень 2"></a>
       </div>
     </div>
