--- a/source/index.html
+++ b/source/index.html
@@ -46,16 +46,18 @@
 
     <section class="advantages">
       <ul class="advantages__list">
-        <div class="advantages__wrapper">
-          <li class="advantages__item advantages__item--lightblue">
+        <li class="advantages__item advantages__item--lightblue">
+          <section class="advantages__text-wrapper">
             <h2 class="advantages__title advantages__title--white">Настоящий городок</h2>
             <span class="advantages__number advantages__number--white">— №1 —</span>
             <p class="advantages__argument advantages__argument--white">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          </section>
+          <div>
             <img class="advantages__image" src="#" width="320" height="260" alt="Жизнь в Седоне">
-          </li>
-        </div>
+          </div>
+        </li>
+        <ul class="advantages__list">
 
-        <div class="advantages__wrapper">
           <li class="advantages__item advantages__item--housing">
             <h3 class="advantages__title">Жилье</h3>
             <p class="advantages__argument">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
@@ -70,18 +72,15 @@
             <h3 class="advantages__title">Еда</h3>
             <p class="advantages__argument">Всегда заказывайте Фирменный бургер, Вы не разочаруетесь!</p>
           </li>
-        </div>
+        </ul>
 
-        <div class="advantages__wrapper">
-          <li class="advantages__item advantages__item--lightblue">
-            <h3 class="advantages__title advantages__title--white">Там есть Мост дьявола</h3>
-            <span class="advantages__number advantages__number--white">— №2 —</span>
-            <p class="advantages__argument advantages__argument--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            <img class="advantages__image" src="#" width="320" height="260" alt="Мост дьявола">
-          </li>
-        </div>
-
-        <div class="advantages__wrapper">
+        <li class="advantages__item advantages__item--lightblue">
+          <h3 class="advantages__title advantages__title--white">Там есть Мост дьявола</h3>
+          <span class="advantages__number advantages__number--white">— №2 —</span>
+          <p class="advantages__argument advantages__argument--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <img class="advantages__image" src="#" width="320" height="260" alt="Мост дьявола">
+        </li>
+        <ul class="advantages__list">
           <li class="advantages__item advantages__item--grey">
             <h3 class="advantages__title"> Небольшая площадь</h3>
             <span class="advantages__number">— №3 —</span>
@@ -99,7 +98,7 @@
             <span class="advantages__number">— №5 —</span>
             <p class="advantages__argument">Большинство едет в Гранд каньон и толпится там</p>
           </li>
-        </div>
+        </ul>
       </ul>
     </section>
 
