--- a/source/form.html
+++ b/source/form.html
@@ -65,8 +65,8 @@
             <input class="feedback__input feedback__input--grey" id="patronymic" type="text" name="patronymic" value="" placeholder="Александрович">
           </p>
         </fieldset>
-        <fieldset class="feedback__fieldset--contact-information">
-          <legend class="feedback__title--contact-information">Контактная информация:</legend>
+        <fieldset class="feedback__fieldset feedback__fieldset--contact-information">
+          <legend class="feedback__title feedback__title--contact-information">Контактная информация:</legend>
           <p>
             <label class="feedback__label" for="tel">Контактный телефон*:</label>
             <input class="feedback__input feedback__input--grey" id="tel" type="tel" name="tel" value="" placeholder="Введите телефон">
@@ -76,8 +76,8 @@
             <input class="feedback__input feedback__input--grey" id="email" type="email" name="email" value="" placeholder="Введите e-mail">
         </fieldset>
 
-        <fieldset class="feedback__fieldset--your-impressions">
-          <legend class="feedback__title--your-impressions">Ваше общее впечатление:</legend>
+        <fieldset class="feedback__fieldset feedback__fieldset--your-impressions">
+          <legend class="feedback__title feedback__title--your-impressions">Ваше общее впечатление:</legend>
           <ul class="feedback__list">
             <li>
               <label class="feedback__label label-relative" for="positive-impression">Скорее положительное</label>
@@ -93,8 +93,8 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="feedback__fieldset--sightseengs-visited">
-          <legend class="feedback__title--sightseengs-visited">Посещенные достопримечательности:</legend>
+        <fieldset class="feedback__fieldset feedback__fieldset--sightseengs-visited">
+          <legend class="feedback__title feedback__title--sightseengs-visited">Посещенные достопримечательности:</legend>
           <ul class="feedback__list">
             <li>
               <input class="feedback__input" type="checkbox" name="devils-bridge" id="filter-devils-bridge" checked>
@@ -114,11 +114,11 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="feedback__fieldset--your-emotions">
-          <legend class="feedback__title--your-emotions">Опишите свои эмоции:</legend>
+        <fieldset class="feedback__fieldset feedback__fieldset--your-emotions">
+          <legend class="feedback__title feedback__title--your-emotions">Опишите свои эмоции:</legend>
           <textarea class="feedback__label feedback__input--grey" id="emotions" name="emotions" rows="5">Опишите подробно все свои восторги</textarea>
         </fieldset>
-        <button class="send-review__show button" type="submit">Отправить отзыв</button>
+        <button class="send-review button" type="submit">Отправить отзыв</button>
       </form>
     </section>
   </main>
